[gd_scene load_steps=20 format=2]

[ext_resource path="res://v1.1 dungeon crawler 16x16 pixel pack/full spritesheet.png" type="Texture" id=1]
[ext_resource path="res://player/RigidPlayer.gd" type="Script" id=2]
[ext_resource path="res://UnitPhisMaterial.tres" type="PhysicsMaterial" id=3]
[ext_resource path="res://sfx/player_take_damage.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 112, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 5.0
height = 5.0

[sub_resource type="Animation" id=12]
length = 0.2
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 4, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.917647, 0.203922, 0.203922, 1 )

[sub_resource type="CircleShape2D" id=14]
radius = 8.0

[sub_resource type="CircleShape2D" id=15]
radius = 15.0

[node name="RigidPlayer" type="RigidBody2D"]
collision_mask = 6
mode = 2
mass = 0.7
physics_material_override = ExtResource( 3 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
sfx_take_dmg = ExtResource( 4 )

[node name="Aim" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 50, 15 )
width = 0.5
default_color = Color( 1, 0.0470588, 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "fly"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/take_damage = SubResource( 12 )

[node name="Blood" type="Particles2D" parent="."]
show_behind_parent = true
rotation = 0.851073
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
process_material = SubResource( 13 )

[node name="PowerUpPicker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerUpPicker"]
shape = SubResource( 14 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="ObjectPicker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectPicker"]
shape = SubResource( 15 )
[connection signal="body_entered" from="PowerUpPicker" to="." method="_on_PowerUpPicker_body_entered"]
[connection signal="body_entered" from="ObjectPicker" to="." method="_on_ObjectPicker_body_entered"]
[connection signal="body_exited" from="ObjectPicker" to="." method="_on_ObjectPicker_body_exited"]
